--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
   "name": "obsidian-dataview-table-cache",
   "version": "1.0.0",
-  "description": "Adds a tables property to each dataview page",
+  "description": "Adds a `tables` property to each dataview page",
   "license": "ISC",
   "author": "Simon Sedlatschek <code@sedlatschek.com>",
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
+    "lint": "eslint --fix",
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "test": "vitest run --config vitest.config.mts"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
+    "@stylistic/eslint-plugin": "^5.4.0",
     "@types/node": "^24.5.2",
     "builtin-modules": "^5.0.0",
     "esbuild": "^0.25.10",
     "esbuild-plugin-copy": "^2.1.1",
+    "eslint": "^9.36.0",
+    "globals": "^16.4.0",
+    "jiti": "^2.6.0",
     "obsidian": "^1.8.7",
-    "obsidian-dataview": "^0.5.68",
+    "obsidian-dataview": "^0.4.21",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.1",
     "vitest": "^3.2.4"
   }
 }
