--- a/package.json
+++ b/package.json
@@ -24,10 +24,16 @@
     "globals": "^16.4.0",
     "jiti": "^2.6.0",
     "obsidian": "^1.8.7",
-    "obsidian-dataview": "^0.4.21",
+    "obsidian-dataview": "^0.5.68",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.1",
     "vitest": "^3.2.4",
     "zod": "^4.1.11"
+  },
+  "dependencies": {
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-wiki-link": "^2.0.1",
+    "unified": "^11.0.5"
   }
 }
