--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jiti": "^2.6.0",
     "obsidian": "^1.8.7",
     "obsidian-dataview": "^0.5.68",
+    "rimraf": "^6.0.1",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.1",
     "vitest": "^3.2.4",
