--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,12 +34,14 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
-    if: >
-      github.ref_type == 'tag' &&
-      startsWith(github.ref, 'refs/tags/') &&
-      github.ref_name =~ '^v[0-9]+\.[0-9]+\.[0-9]+$'
     steps:
       - uses: actions/checkout@v4
+      - name: Check if tag is semver
+        run: |
+          if [[ ! "${GITHUB_REF_NAME}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Tag ${GITHUB_REF_NAME} is not semver. Skipping release."
+            exit 1
+          fi
       - uses: actions/download-artifact@v4
         with:
           name: dist
