--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,10 @@ jobs:
       - run: npm run lint
       - run: npm test
       - name: Archive dist
+        if: startsWith(github.ref, 'refs/tags/v')
         run: tar -czf dist.tgz dist
       - uses: actions/upload-artifact@v4
+        if: startsWith(github.ref, 'refs/tags/v')
         with:
           name: dist
           path: dist.tgz
@@ -34,6 +36,7 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v4
       - name: Check if tag is semver
