--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint",
     "build": "rimraf --glob dist/* && tsc -noEmit -skipLibCheck && node esbuild.config.mts production",
     "test": "vitest run --config vitest.config.mts",
-    "preversion": "node release.mts"
+    "version": "node version.mts && git add src/manifest.json versions.json"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -24,7 +24,7 @@
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
     "jiti": "^2.6.0",
-    "obsidian": "^1.8.7",
+    "obsidian": "1.8.7",
     "obsidian-dataview": "^0.5.68",
     "rimraf": "^6.0.1",
     "typescript": "^5.9.2",
