--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       - run: npm test
       - name: archive dist
         if: startsWith(github.ref, 'refs/tags/v')
-        run: tar -czf "$ARCHIVE_NAME" dist
+        run: tar -czf "$ARCHIVE_NAME" -C dist .
       - name: upload artifact
         if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/upload-artifact@v4
