--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "esbuild": "^0.25.10",
     "esbuild-plugin-copy": "^2.1.1",
     "eslint": "^9.36.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.4.0",
     "jiti": "^2.6.0",
     "obsidian": "1.8.7",
